feat: initial commit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,7 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -33,6 +32,6 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
     }
 }
