--- a/package.json
+++ b/package.json
@@ -6,18 +6,41 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "18.16.3",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
+    "@vitest/coverage-c8": "0.31.1",
+    "@vitest/ui": "0.31.1",
     "eslint": "8.39.0",
+    "npm-run-all": "4.1.5",
+    "prisma": "4.14.1",
+    "supertest": "6.3.3",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.31.1"
   },
   "dependencies": {
+    "@fastify/cookie": "8.3.0",
+    "@fastify/jwt": "7.2.0",
+    "@prisma/client": "4.14.1",
+    "bcryptjs": "2.4.3",
+    "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "fastify": "4.17.0",
     "zod": "3.21.4"
